--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,11 @@ span.heading {
 
 span.subheading {
 	font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
-	font-size: 20px;
+	font-size: 22px;
 	font-style: italic;
+	display: block;
+	letter-spacing: 4px;
+	word-spacing: 3px;
 }
 
 div.panel {
@@ -82,6 +85,13 @@ nav.header li a:hover {
 	color: #244FA6;
 }
 
+/** HOME SPECIFIC **/
+
+body.home #panel-1 {
+	text-align: center;
+	margin-top: 0;
+}
+
 body.home p.quote {
 	font-size: 31px;
 	padding: 0 25px;
@@ -89,9 +99,9 @@ body.home p.quote {
 	line-height: 42px;
 }
 
-/** HOME SPECIFIC **/
-
-body.home #panel-1 {
-	text-align: center;
-	margin-top: 0;
+ul#portfolio li {
+	float: left;
+	width: 25%;
+	display: inline;
+	margin-top: 31px;
 }
