--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,11 @@ nav.header li a {
 	font-style: normal;
 	text-decoration: none;
 	letter-spacing: 5px;
-	-o-transition:color .2s ease-out, background 2s ease-in;
-	-ms-transition:color .2s ease-out, background 2s ease-in;
-	-moz-transition:color .2s ease-out, background 2s ease-in;
-	-webkit-transition:color .2s ease-out, background 2s ease-in;
-	transition:color .2s ease-out, background 2s ease-in;
+	-o-transition:color .2s ease-out, background 1s ease-in;
+	-ms-transition:color .2s ease-out, background 1s ease-in;
+	-moz-transition:color .2s ease-out, background 1s ease-in;
+	-webkit-transition:color .2s ease-out, background 1s ease-in;
+	transition:color .2s ease-out, background 1s ease-in;
 }
 
 nav.header li a.selected,
@@ -101,7 +101,13 @@ body.home p.quote {
 
 ul#portfolio li {
 	float: left;
-	width: 25%;
+	width: 230px;
+	height: 132px;
 	display: inline;
 	margin-top: 31px;
+	text-align: center;
+	line-height:132px;
+}
+ul#portfolio li a img {
+	vertical-align: middle;
 }
