Modify how we're handling panel width.  Makes initial load on mobile better.

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,8 @@ div.panel {
 
 div.panel-container,
 nav.header {
-	width: 1000px;
+	width: 100%;
+	max-width: 1000px;
 	margin: 0 auto;
 	overflow: auto;
 }
