--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,3 +5,33 @@
 @-ms-viewport{
 	width: device-width;
 }
+
+/* ---------- iPad Only ---------- */
+@media only screen and (device-width: 768px) {
+  .ipad-only { display: block; }
+}
+
+/* ---------- iPhone/iPod Only ---------- */
+@media only screen and (device-width: 320px) {
+  .iphone-only { display: block; }
+}
+
+/* ---------- Retina Device Only ---------- */
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+  .retina-only { display: block; }
+}
+
+/* ---------- Non Retina Device Only ---------- */
+@media only screen and (-webkit-max-device-pixel-ratio: 1) {
+  .non-retina-only { display: block; }
+}
+
+/* ---------- Retina iPhone/iPod Only ---------- */
+@media only screen and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) {
+  .retina-iphone-only { display: block; }
+}
+
+/* ---------- Non Retina iPhone/iPod Only ---------- */
+@media only screen and (device-width: 320px) and (-webkit-max-device-pixel-ratio: 1) {
+  .non-retina-iphone-only { display: block; }
+}
