--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ span.heading {
 	font-size: 67px;
 	font-style: normal;
 	letter-spacing: 6px;
-	word-spacing: 19px;
+	word-spacing: 1px;
 }
 
 span.subheading {
@@ -72,7 +72,7 @@ nav.header {
 }
 
 nav.header {
-	margin: 34px auto 135px;
+	margin: 0 auto 50px;
 }
 
 nav.header ul {
@@ -138,7 +138,7 @@ ul#portfolio li a img {
 
 body.home div#panel-2 {
 	background-color: rgba(23, 22, 22, 0.7);
-	padding: 135px 0 0;
+	padding: 100px 0;
 }
 
 body.home div#panel-2 a img {
