For logos, don't treat them like links, since they're not going anywhere.

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,9 @@ ul#portfolio li {
 	text-align: center;
 	line-height:132px;
 }
-
+ul#portfolio li a {
+	cursor: default;
+}
 ul#portfolio li a img {
 	vertical-align: middle;
 }
