--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,7 @@ body.home #panel-3 .panel-container {
 	position: relative;
 	overflow: hidden;
 	background-color: rgba(44, 46, 48, 1);
+	cursor: pointer;
 }
 
 #video h2,
