--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ div.location h3 {
 	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
 	font-size: 20px;
 	font-weight: normal;
-	letter-spacing: 6px;
+	letter-spacing: 4px;
 	text-transform: uppercase;
 }
 
@@ -323,8 +323,8 @@ body.home #panel-3 .panel-container {
 #audio h2,
 #photography h2,
 #design h2 {
-	font-size: 25px;
-	font-weight: normal;
+	font-size: 35px;
+	font-weight: 500;
 	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
 	font-style: normal;
 	letter-spacing: 6px;
