Better social transitions.  Phone numbers for phone numbers.

--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,10 @@ div.img:hover {
 	clear: right;
 }
 
+span.telephone {
+	cursor: default;
+}
+
 div.colophon {
 	background: #161616;
 	padding: 25px 0 0 0;
@@ -401,11 +405,11 @@ a.genericon {
 	padding: 7px;
 	background-color: #244FA6;
 	font-size: 17px;
-	-o-transition:color .1s ease-out, background .1s ease-in;
-	-ms-transition:color .1s ease-out, background .1s ease-in;
-	-moz-transition:color .1s ease-out, background .1s ease-in;
-	-webkit-transition:color .1s ease-out, background .1s ease-in;
-	transition:color .1s ease-out, background .1s ease-in;
+	-o-transition:color .2s ease-out, background .2s ease-in;
+	-ms-transition:color .2s ease-out, background .2s ease-in;
+	-moz-transition:color .2s ease-out, background .2s ease-in;
+	-webkit-transition:color .2s ease-out, background .2s ease-in;
+	transition:color .2s ease-out, background .2s ease-in;
 	color: #161616;
 }
 
