--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ div.address span a {
 	text-decoration: none
 }
 
+div.address a.add {
+	text-decoration: none;
+	color: white;
+}
+
 #contact-bubble {
 	font-family: "Didot W02 Roman";
 	font-size: 20px;
@@ -193,10 +198,6 @@ div.panel {
 	min-height:100px;
 }
 
-div#panel-1 {
-	margin: 0 0 300px 0;
-}
-
 div.panel.location {
 	background-color: #161616;
 	opacity: .95;
@@ -250,9 +251,10 @@ nav.header li a:hover {
 
 /** HOME SPECIFIC **/
 
-body.home #panel-1 {
+#panel-1 {
 	text-align: center;
 	margin-top: 0;
+	margin: 0 0 300px 0;
 }
 
 body.home p.quote {
