--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,12 @@ body.who #panel-2 p {
 	text-align: justify;
 }
 
+div.content-1,
+div.content-2 {
+	width: 922px;
+	margin: 0 auto;
+}
+
 /** BIG VIDEO **/
 #big-video-wrap {
     overflow: hidden;
