--- a/css/style.css
+++ b/css/style.css
@@ -441,6 +441,10 @@ div.content-2 {
 	margin: 0 auto;
 }
 
+div.content-1 {
+	margin-bottom: 60px;
+}
+
 body.who div.content-2 h2 {
 	float: left;
 	width: 400px;
