--- a/css/style.css
+++ b/css/style.css
@@ -456,12 +456,18 @@ div.content-2 ul#portfolio {
 	float: right;
 	margin-top: 60px;
 }
+
 div.content-2 ul#portfolio li {
 	float: left;
 	width: 141px;
 	height: 79px;
 	display: inline-block;
 	margin: -60px 0 0 -45px;
+}
+
+div.content-2 ul#portfolio li img {
+	max-width: 50%;
+	max-height: 50%;
 }
 
 body.who div.content-2 h2 {
