--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,10 @@ body.who #panel-2 div.content-2 p {
 	font-size: 26px;
 }
 
+body.who div#panel-3 {
+	background-color: rgba( 255, 255, 255, .7 );
+}
+
 /** BIG VIDEO **/
 #big-video-wrap {
     overflow: hidden;
