--- a/css/style.css
+++ b/css/style.css
@@ -485,6 +485,18 @@ body.who #panel-2 div.content-2 p {
 body.who div#panel-3 {
 	background-color: rgba( 255, 255, 255, .7 );
 }
+.bio {
+	overflow: auto
+}
+
+.bio img {
+	float: left;
+	margin-top: -50px;
+}
+
+.bio.right img {
+	float: right;
+}
 
 /** BIG VIDEO **/
 #big-video-wrap {
