--- a/css/style.css
+++ b/css/style.css
@@ -486,16 +486,32 @@ body.who div#panel-3 {
 	background-color: rgba( 255, 255, 255, .7 );
 }
 .bio {
-	overflow: auto
+	overflow: auto;
+	position: relative;
+	bottom: 90px;
+
 }
 
 .bio img {
 	float: left;
-	max-height: 100%
+	max-height: 100%;
 }
 
 .bio.right img {
 	float: right;
+}
+
+
+.bio h2 {
+	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
+	font-size: 25px;
+	font-weight: 500;
+	text-transform: uppercase;
+	color: #244FA6;
+}
+
+.bio p {
+	color: #000;
 }
 
 /** BIG VIDEO **/
