--- a/css/style.css
+++ b/css/style.css
@@ -447,10 +447,7 @@ div.content-1,
 div.content-2 {
 	width: 922px;
 	margin: 0 auto;
-}
-
-div.content-1 {
-	margin-bottom: 60px;
+	padding-bottom: 60px;
 }
 
 div.content-2 ul#portfolio {
