--- a/css/style.css
+++ b/css/style.css
@@ -312,10 +312,10 @@ body.home #panel-3 .panel-container {
 	cursor: pointer;
 }
 
-#video h2 a,
-#audio h2 a,
-#photography h2 a,
-#design h2 a {
+#video h2,
+#audio h2,
+#photography h2,
+#design h2 {
 	font-size: 35px;
 	font-weight: 500;
 	font-family: 'futura-pt', Futura, "Trebuchet MS", Arial, sans-serif;
