--- a/css/style.css
+++ b/css/style.css
@@ -251,9 +251,13 @@ nav.header li a:hover {
 	color: #244FA6;
 }
 
+div.panel {
+	margin-top: 140px;
+}
+
 /** HOME SPECIFIC **/
 
-#panel-1 {
+#panel-1.panel {
 	text-align: center;
 	margin-top: 0;
 	margin: 0 0 300px 0;
