Don't add padding for footer.

--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,11 @@ div.panel {
 	margin-top: 140px;
 }
 
+div.panel.map,
+div.panel.colophon {
+	margin-top: 0;
+}
+
 /** HOME SPECIFIC **/
 
 #panel-1.panel {
