--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,10 @@ div.panel.colophon {
 	margin: 0 0 300px 0;
 }
 
+body.home #panel-1 .panel-container {
+	position: relative;
+}
+
 p.quote {
 	font-size: 31px;
 	padding: 0 25px;
