--- a/css/style.css
+++ b/css/style.css
@@ -266,6 +266,10 @@ div.panel.colophon {
 	text-align: center;
 	margin-top: 0;
 	margin: 0 0 300px 0;
+	height: 600px;
+	overflow: hidden;
+	position: relative;
+
 }
 
 body.home #panel-1 .panel-container {
