--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ div.address {
 
 div.address span,
 div.address span a {
-	color: #0380FF;
+	color: #0048BB;
 	text-decoration: none
 }
 
@@ -248,7 +248,7 @@ nav.header li a {
 
 nav.header li a.selected,
 nav.header li a:hover {
-	color: #244FA6;
+	color: #0048BB;
 }
 
 div.panel {
@@ -453,7 +453,7 @@ a.genericon {
 	height:18px;
 	width: 18px;
 	padding: 7px;
-	background-color: #244FA6;
+	background-color: #0048BB;
 	font-size: 17px;
 	-o-transition:color .2s ease-out, background .2s ease-in;
 	-ms-transition:color .2s ease-out, background .2s ease-in;
@@ -464,12 +464,12 @@ a.genericon {
 }
 
 a.genericon:hover {
-	background-color: #666;
+	background-color: #FFF;
 }
 
 /** WHO WE ARE **/
 body.who #panel-2 h2 {
-	color: #244FA6;
+	color: #0048BB;
 	letter-spacing: 0;
 	word-spacing: 0
 }
@@ -557,7 +557,7 @@ h2.jordan {
 	font-size: 25px;
 	font-weight: 500;
 	text-transform: uppercase;
-	color: #244FA6;
+	color: #0048BB;
 	margin-top: 180px;
 	margin-bottom: -10px;
 }
