--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ div.address a.add {
 }
 
 #contact-bubble:hover {
-	color: #0380FF;
+	color: #0048BB;
 	background: url('../img/bubble-hover.png' );
 }
 
