--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,8 @@ div.panel.location {
 
 div.panel-container,
 nav.header {
-	max-width: 100%;
+	width: 100%;
+	max-width: 1000px;
 	margin: 0 auto;
 	overflow: auto;
 }
