--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,6 @@ body.home #panel-3 .panel-container {
 	width: 50%;
 	padding: 0;
 	position: relative;
-	overflow: hidden;
 	background-color: rgba(44, 46, 48, 1);
 	cursor: pointer;
 }
@@ -378,8 +377,21 @@ body.home #panel-3 .panel-container {
 	z-index: 10
 }
 
-.ratio16_9:before{
+#video:before,
+#audio:before,
+#photography:before,
+#design:before {
+	content: "";
+	display: block;
 	padding-top: 56.25%;
+}
+
+.services-container {
+	position:  absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
 }
 
 div.img {
