--- a/css/style.css
+++ b/css/style.css
@@ -373,7 +373,15 @@ body.home #panel-3 .panel-container {
 	word-spacing: 19px;
 	text-transform: uppercase;
 	position: absolute;
-	z-index: 10
+	z-index: 10;
+	font-weight: normal
+}
+
+#video h2:after,
+#audio h2:after,
+#photography h2:after,
+#design h2:after {
+ 	content: url( ../img/header-caret.png );
 }
 
 #video:before,
