--- a/css/style.css
+++ b/css/style.css
@@ -381,7 +381,10 @@ body.home #panel-3 .panel-container {
 #audio h2:after,
 #photography h2:after,
 #design h2:after {
- 	content: url( ../img/header-caret.png );
+	content: url( ../img/header-caret.png );
+	position: relative;
+	top: 3px;
+	left: 3px
 }
 
 #video:before,
