--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ body, html {
 	font-size: 18px;
 	margin: 0;
 	padding: 0;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
 }
 
 a {
