--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ body.home #panel-1 .panel-container {
 }
 
 body.home #panel-1 .panel-container.desktop-panel {
-	margin-top: -160px;
+	margin-top: --112px;
 }
 
 p.quote {
