--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,21 @@ a.genericon:hover {
 
 div.social li.linkedin a.genericon {
 	font-size: 27px;
-	padding: 3px 11px 11px 3px
+	padding: 2px 11px 12px 3px
+}
+
+div.social li.twitter a.genericon {
+	padding: 8px 6px 6px 8px;
+}
+
+div.social li.facebook a.genericon {
+	font-size: 22px;
+	padding: 6px 9px 8px 5px;
+}
+
+div.social li.vimeo a.genericon {
+	font-size: 22px;
+	padding: 8px 7px 6px;
 }
 
 /** WHO WE ARE **/
