Attempt background image transition.  Need to check in FF.

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,11 @@ nav.header li a {
 	letter-spacing: 5px;
 	background: none no-repeat center center;
 	padding-top: 50px;
-
+	-webkit-transition: background-image 0.2s ease-in-out;
+	-moz-transition: background-image 0.2s ease-in-out;
+	-ms-transition: background-image 0.2s ease-in-out;
+	-o-transition: background-image 0.2s ease-in-out;
+	transition: background-image 0.2s ease-in-out;
 }
 
 nav.header li a.selected,
