--- a/css/style.css
+++ b/css/style.css
@@ -545,7 +545,7 @@ body.who #panel-2 .content-2 h2 span.heading {
 }
 
 body.who #panel-2 p {
-	width: 903px;
+	width: 920px;
 	font-size: 30px;
 	text-align: justify;
 }
@@ -557,7 +557,7 @@ body.who #panel-2 div.panel-container {
 
 div.content-1,
 div.content-2 {
-	width: 922px;
+	width: 100%;
 	margin: 0 auto;
 	padding-bottom: 60px;
 }
