--- a/css/style.css
+++ b/css/style.css
@@ -564,7 +564,7 @@ div.content-2 {
 
 div.content-2 ul#portfolio {
 	float: right;
-	margin-top: 10px;
+	margin: 0 46px 0 0 ;
 }
 
 div.content-2 ul#portfolio li {
@@ -572,7 +572,7 @@ div.content-2 ul#portfolio li {
 	width: 141px;
 	height: 79px;
 	display: inline-block;
-	margin: -60px 0 0 -45px;
+	margin: -60px 0 0 -39px;
 }
 
 div.content-2 ul#portfolio li img {
