Proper height for play button

--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ p.quote {
 body.video p.quote {
 	text-align: right;
 	font-size: 29px;
-	padding: 160px 6px;
+	padding: 160px 6px 0;
 }
 
 ul#portfolio li {
