--- a/css/style.css
+++ b/css/style.css
@@ -605,6 +605,14 @@ body.who div#panel-3 {
 	background-color: rgba( 255, 255, 255, .93 );
 }
 
+canvas#demo,
+canvas#reel {
+	position: relative;
+	z-index: 1;
+	width: 100%;
+	opacity: .95;
+}
+
 h2.jordan {
 	letter-spacing: -1px;
 	word-spacing: 3px;
